# dbdf

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dbdf/: base.py  core.py  csv.py  ddl.py  files.py  main.py  notes.md  oracle.py  oracle2.py  oracle3.py  parquet.py  postgre.py  postgres.py  postgresql.py  todo.txt
src/dbdf/converters.py/: dataframe.py
src/dbdf/postgre/: connections.py  core.py  utils.py
src/dbdf/type_mapping/: polars_to_sql.py
test/: benchmark.md  compose.yaml  creation_test.py  generate.py  generate4.py  generate5.py  generate_test_data.py  load_test_data.py  load_test_oracle.py  oracle_setup.sql  test.py  test2.py  test_oracle.py  test_oracle2.py  test_oracle2_perf.py  test_oracle_ddl.py
test/oracle-test-setup/: Dockerfile.app  README.md  docker-compose.yml  docker-entrypoint.sh  generate_test_data.py  generator_csv.py  load_test_data_oracle.py  requirements.txt  test_write_database.py  write_database.py
test/oracle-test-setup/init-scripts/: 01_create_tables.sql  02_create_data_table.sql
