[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dbdf"
version = "0.1.0"
description = "Library for high-performance database reading and writing from-to dataframe."
authors = [
    {name = "Ferdinand Gabe Tua Sinaga"},
    {name = "Muhammad Iqbal Haidar"},
    {name = "Rafa Abdussalam Danadyaksa"},
]
dependencies = [
    "polars",
    "pandas",
    "tqdm",
    "oracledb",
    "pyarrow",
    "adbc_driver_postgresql",
    "connectorx"
]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"

[tool.ruff]
exclude = ["test"]
indent-width = 4
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
